# financial_analysis

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  Makefile  README.md  alembic.ini  claude-code-prompt.md  config.yaml  docker-compose.yml  pyproject.toml
app/: config.py  db.py  ingest.py  main.py  models.py  upload_router.py
app/ingestion/: chunker.py  cli.py  config.py  edgar_client.py  embedder.py  fetcher_filings.py  fetcher_upload.py  fetcher_xbrl.py  parser_html.py  parser_pdf.py  parser_pdf_numbering.py  parser_xbrl.py  pipeline.py  summarizer.py
app/migrations/: env.py
app/migrations/versions/: 0001_initial.py  0002_widen_doc_type.py
db/: init.sql
